# pmc

./: .gitignore  CMakeLists.txt  Makefile  libpmc.h  libpmc_test.cpp  pmc  pmc.jl  pmc.m  pmc.py  pmc_clique_utils.cpp  pmc_cores.cpp  pmc_driver.cpp  pmc_graph.cpp  pmc_graph.h  pmc_heu.cpp  pmc_heu.h  pmc_input.h  pmc_lib.cpp  pmc_maxclique.cpp  pmc_neigh_coloring.h  pmc_utils.cpp  pmc_vertex.h  pmcx_maxclique.cpp  pmcx_maxclique.h  pmcx_maxclique_basic.cpp  pmcx_maxclique_basic.h
cmake/: pmcConfig.cmake
include/pmc/: pmc_graph.h  pmc_heu.h  pmc_maxclique.h  pmc_neigh_coloring.h  pmc_vertex.h
